# RaspberryPi-Projects

./: ADXL345.cpp  ADXL345.h  CMakeLists.txt  GY80SensorDataSource.hxx  L3G4200D.cpp  L3G4200D.h  README.md  boost_client.cpp  capture_frame_from_cam.cxx  client.cpp  i2c_poc.cpp  rstp_stream_capture.cpp
gy80_poc/: CMakeCache.txt  CMakeLists.txt  L3G4200D.cpp  Makefile  README.md  boostclient  client  cmake_install.cmake  epollClient  epollServer  epoll_client.cpp  epoll_server.cpp  i2c_poc.cpp  mergeSort  merge_sort.cpp  sensorServer  sensorServer.cxx  sensor_server_epoll.cpp
gy80_poc/gy80_poc/: Makefile  cmake_install.cmake
gy80_poc/pi_opencv_mail_app/: CMakeCache.txt  CMakeLists.txt  Makefile  MyVideo.avi  VideoTest  capture_frame_from_cam.cxx  cmake_install.cmake  gpio_class.h  image_capture  main_exe.cpp  old_makefile
gy80_poc/video_stream/: Makefile  cmake_install.cmake
install/lib/: libcommlib.so.1
pi_opencv_mail_app/: gpio_class.cpp
rpi_cmake/: Findcommlib.cmake
video_stream/: CMakeLists.txt  GyroDataSource.cxx  GyroDataSource.hxx  SensorSocket.cxx  SensorSocket.hxx  SensorSocketTCP.cxx  SensorSocketTCP.hxx  SensorSocketUDP.cxx  SensorSocketUDP.hxx  build_commlib.cmake  opencv_matrix_poc.cxx  video_renderer_client.cxx  video_renderer_server.cxx
